<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.ualberta.cmput301.t03.trading.TradeOfferReviewFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="UserABC"
            android:id="@+id/tradeReviewOtherUser" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="wants"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/trade_offer_padding_between_user_and_other_word" />
    </LinearLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/fragment_item_tile"
        android:layout_marginLeft="0dp"
        android:id="@+id/tradeComposeOwnerItem"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="They are offering"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/trade_offer_padding_between_user_and_other_word"
        android:layout_below="@+id/tradeComposeOwnerItem"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/textView" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/fragment_item_tile"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tradeReviewDeclineAndCounterOffer"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Accept"
            android:id="@+id/tradeReviewAccept"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Decline"
            android:id="@+id/tradeReviewDecline"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Decline and Counter-Offer"
        android:id="@+id/tradeReviewDeclineAndCounterOffer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
