<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.ualberta.cmput301.t03.trading.TradeOfferHistoryFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tradeHistorySwipeLayout">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tradeHistoryListView"
            tools:listitem="@layout/fragment_trade_tile" />
    </android.support.v4.widget.SwipeRefreshLayout>


</FrameLayout>
